# clangast

./: .gitignore  CMakeLists.txt  output.txt  test1.txt  test2.txt
src/: DeclFinder.hpp  DeclFinderAction.hpp  DeclVisitor.hpp  PreprocessCallBacks.hpp  PreprocessorClassFinderAction.hpp  ScriptingCreator.cpp  ScriptingCreator.hpp  main.cpp
test_code/: shared.hpp  test.cpp  test.hpp  test2.cpp
